# seriesdb-server

./: .gitignore  Cargo.toml  Makefile  README.md
config/: settings.example.toml  settings.toml
protocol-generator/: Cargo.toml
protocol-generator/src/: main.rs
src/: db.rs  db_ops.rs  db_owner.rs  db_ref.rs  handler.rs  main.rs  server.rs  settings.rs  table.rs
src/db/: db_ops.rs  db_owner.rs  db_ref.rs  mod.rs  table.rs
src/protocol/: mod.rs  seriesdb_protocol.rs  seriesdb_protocol_ext.rs
src/sync/: connection.rs  mod.rs  ref_aware.rs  syncer.rs
