[package]
name = "seriesdb-server"
version = "0.1.0"
authors = ["Chaoqian Xu <chaoranxu@gmail.com>"]
edition = "2018"

[dependencies]
config = "0.9"
log = "0.4"
log4rs = "0.8"

bytes = "0.4"
byteorder = "1.3"
lazy_static = "1.4.0"

futures = "0.1"
tokio = "0.1.22"

actix = "0.8.3"
actix-web = "1.0.8"
actix-web-actors = "1.0.2"
actix-codec = "0.1.2"
awc = "0.2.8"

prost = "0.5"
serde_derive = "1.0.102"
serde = "1.0.102"

seriesdb = {git = "https://github.com/seriesdb/seriesdb.git", branch = "master"}